Fix a crash when trying to save an image with a fill layer

BUG:459252