libs/image/kis_selection_based_layer.cpp
@@ -110,8 +110,6 @@ void KisSelectionBasedLayer::setImage(KisImageWSP image)
     if (image) {
         m_d->imageConnections.addConnection(image.data(), SIGNAL(sigSizeChanged(QPointF,QPointF)), this, SLOT(slotImageSizeChanged()));
     }
-
-    resetCache();
 }
 
 bool KisSelectionBasedLayer::allowAsChild(KisNodeSP node) const
